--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Web App</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="main.css">
 </head>
@@ -31,24 +33,69 @@
         </div>
     </nav>
 
-<div class="container">
-    <div class="songlist">
-    <h1>Best of ncs - Non copyright sound</h1>
+    <div class="container">
+        <div class="songlist">
+            <h1>Best of ncs - Non copyright sound</h1>
+            <div class="songItem">
+                <img src="img/1.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/2.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/3.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/4.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/5.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/6.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+            <div class="songItem">
+                <img src="img/7.jpg" alt="1" height="45px" width="50px">
+                <span>Let Me Love You</span>
+                <span class="songlistplay"><span class="timestamp">05:34</span> <i
+                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+            </div>
+        </div>
+        <div class="songbanner1" id="songbanner">
 
+        </div>
     </div>
-    <div class="songbanner1" id="songbanner">
-        <!-- <img src="img/bg.jpg" alt="bg image"   width="500px" height="400px"> -->
-    </div>
-</div>
 
-<div class="bottom">
-    <input type="range" name="range" id="myprogressbar" min="0" max="100">
-    <div class="icons">
-        <i class="fa-solid fa-backward-fast fa-2xl"></i>
-        <i class="fa-solid fa-circle-play fa-2xl"></i>
-        <i class="fa-solid fa-forward-fast fa-2xl"></i>
+    <div class="bottom">
+        <input type="range" name="range" id="myprogressbar" min="0" value="0" max="100">
+        <div class="icons">
+            <i class="fa-solid fa-backward-fast fa-2xl"></i>
+            <i class="fa-solid fa-circle-play fa-2xl" id="masterplay"></i>
+            <i class="fa-solid fa-forward-fast fa-2xl"></i>
+            <div class="songinfo">
+                <img src="img/playing.gif" alt="play" id="gif"  width="42px"> Let Me Love You - Justien Bieber 
+            </div>
+        </div>
+      
     </div>
-</div>
     <script src="app.js"></script>
 </body>
 
