completed all functionalities

--- a/index.html
+++ b/index.html
@@ -38,45 +38,45 @@
             <h1>Best of ncs - Non copyright sound</h1>
             <div class="songItem">
                 <img src="img/1.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="0" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/2.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="1" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/3.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="2" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/4.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="3" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/5.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="4" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/6.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="5" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
             <div class="songItem">
                 <img src="img/7.jpg" alt="1" height="45px" width="50px">
-                <span>Let Me Love You</span>
+                <span class="songname">Let Me Love You</span>
                 <span class="songlistplay"><span class="timestamp">05:34</span> <i
-                        class="fa-solid fa-circle-play fa-1xl"></i> </span>
+                        id="6" class="fa-solid allplay fa-circle-play fa-1xl"></i> </span>
             </div>
         </div>
         <div class="songbanner1" id="songbanner">
@@ -87,11 +87,11 @@
     <div class="bottom">
         <input type="range" name="range" id="myprogressbar" min="0" value="0" max="100">
         <div class="icons">
-            <i class="fa-solid fa-backward-fast fa-2xl"></i>
-            <i class="fa-solid fa-circle-play fa-2xl" id="masterplay"></i>
-            <i class="fa-solid fa-forward-fast fa-2xl"></i>
+            <i class="fa-solid fa-backward-fast fa-2xl" id="previous"></i>
+            <i class="fa-solid  fa-circle-play fa-2xl" id="masterplay"></i>
+            <i class="fa-solid fa-forward-fast fa-2xl" id="next"></i>
             <div class="songinfo">
-                <img src="img/playing.gif" alt="play" id="gif"  width="42px"> Let Me Love You - Justien Bieber 
+                <img src="img/playing.gif" alt="play" id="gif"  width="42px"> <span id="newsongname"></span> 
             </div>
         </div>
       
